Занимать одну строку или несколько — flex-wrap

--- a/CSS Flexbox на каждый день/05. Занимать одну строку или несколько — flex-wrap/index.html
+++ b/CSS Flexbox на каждый день/05. Занимать одну строку или несколько — flex-wrap/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!-- <div class="container">
-      <div class="element">1</div>
-      <div class="element">2</div>
-      <div class="element">3</div>
+    <div class="container">
+      <div class="element">1. Это короткий параграф на несколько слов</div>
+      <div class="element">2. Пара слов</div>
+      <div class="element"><h3>3. Это заголовок 3</h3></div>
       <div class="element"><h5>4 Это заголовок H5</h5></div>
       <div class="element">5 Это эмодзи</div>
       <div class="element">6</div>
@@ -21,8 +21,8 @@
       <div class="element">10</div>
       <div class="element">11</div>
       <div class="element">12</div>
-    </div> -->
-    <div class="content">
+    </div>
+    <!-- <div class="content">
       <main>
         <p>
           Душа моя озарена неземной радостью, как эти чудесные весенние утра,
@@ -65,15 +65,13 @@
 
       <aside>
         <ul>
-          <!-- Создаёт маркированный список. У него может быть как ID так и class -->
-          <!-- Элементы списка -->
           <li>Многомерный полином</li>
           <li>Нормальный абсолютно сходящийся ряд</li>
           <li>Интеграл от функции</li>
           <li>Коллинеарный экстремум функции</li>
         </ul>
       </aside>
-    </div>
+    </div> -->
   </body>
 </html>
 
