--- a/CSS Flexbox на каждый день/19. Вариативное расположение полей формы/index.html
+++ b/CSS Flexbox на каждый день/19. Вариативное расположение полей формы/index.html
@@ -20,11 +20,11 @@
             <input type="email" id="email" class="input" />
           </div>
         </div>
-        <div class="horizontalField el">
+        <div class="tema_div">
           <label htmlFor="tema"> Тема</label>
           <input type="text" id="tema" class="input" />
         </div>
-        <div class="textField">
+        <div class="textarea_div">
           <label for="message">Введите сообщение:</label>
           <textarea
             id="message"
@@ -34,7 +34,7 @@
             class="textarea"
           ></textarea>
         </div>
-        <div class="">
+        <div class="checkbox_div">
           <input type="checkbox" id="checkbox" class="" />
           <label htmlFor="checkbox"
             >Даю <a href="#" target="_blank" rel="nofollow">согласие</a> на
@@ -42,7 +42,7 @@
           >
         </div>
 
-        <div class="formSubmit">
+        <div class="button_div">
           <button class="button">Отправить</button>
         </div>
         <div></div>
