--- a/CSS Flexbox на каждый день/19. Вариативное расположение полей формы/index.html
+++ b/CSS Flexbox на каждый день/19. Вариативное расположение полей формы/index.html
@@ -20,6 +20,10 @@
             <input type="email" id="email" class="input" />
           </div>
         </div>
+        <div class="horizontalField el">
+          <label htmlFor="tel">Телефон</label>
+          <input type="tel" id="tel" class="input" />
+        </div>
         <div class="tema_div">
           <label htmlFor="tema"> Тема</label>
           <input type="text" id="tema" class="input" />
