--- a/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/index.html
+++ b/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/index.html
@@ -8,28 +8,29 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <form action="">
-      <div class="horizontalForm">
-        <div class="horizontalField">
+    <div class="container">
+      <div class="horizontalField">
+        <div class="name_div">
           <label htmlFor="name">Имя</label>
-          <input type="text" id="name" class="input" />
+          <input type="text" id="name" class="input" required />
         </div>
-
-        <div class="horizontalField">
+        <div class="email_dev">
           <label htmlFor="email">Почта</label>
-          <input type="email" id="email" class="input" />
+          <input type="email" id="email" class="input" required />
         </div>
 
-        <div class="formSubmit">
-          <button class="button">Отправить</button>
+        <div class="button_div">
+          <button class="button" type="submit">Отправить</button>
         </div>
-        <div>
+
+        <!-- <div class="checkbox_div">
           <input type="checkbox" id="checkbox" class="" />
           <label htmlFor="checkbox"
-            >Даю согласи на обработку персональных данны</label
+            >Даю <a href="#" target="_blank" rel="nofollow">согласие</a> на
+            обработку персональных данных</label
           >
-        </div>
+        </div> -->
       </div>
-    </form>
+    </div>
   </body>
 </html>
