--- a/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/index.html
+++ b/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/index.html
@@ -23,13 +23,13 @@
           <button class="button" type="submit">Отправить</button>
         </div>
 
-        <!-- <div class="checkbox_div">
+        <div class="checkbox_div">
           <input type="checkbox" id="checkbox" class="" />
           <label htmlFor="checkbox"
             >Даю <a href="#" target="_blank" rel="nofollow">согласие</a> на
             обработку персональных данных</label
           >
-        </div> -->
+        </div>
       </div>
     </div>
   </body>
