--- a/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/index.html
+++ b/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/index.html
@@ -9,28 +9,30 @@
   </head>
   <body>
     <div class="container">
-      <div class="horizontalField">
-        <div class="name_div">
-          <label htmlFor="name">Имя</label>
-          <input type="text" id="name" class="input" required />
-        </div>
-        <div class="email_dev">
-          <label htmlFor="email">Почта</label>
-          <input type="email" id="email" class="input" required />
-        </div>
+      <form action="">
+        <div class="horizontalField">
+          <div class="name_div">
+            <label htmlFor="name">Имя</label>
+            <input type="text" id="name" class="input" required />
+          </div>
+          <div class="email_dev">
+            <label htmlFor="email">Почта</label>
+            <input type="email" id="email" class="input" required />
+          </div>
 
-        <div class="button_div">
-          <button class="button" type="submit">Отправить</button>
-        </div>
+          <div class="button_div">
+            <button class="button" type="submit">Отправить</button>
+          </div>
 
-        <div class="checkbox_div">
-          <input type="checkbox" id="checkbox" class="" />
-          <label htmlFor="checkbox"
-            >Даю <a href="#" target="_blank" rel="nofollow">согласие</a> на
-            обработку персональных данных</label
-          >
+          <div class="checkbox_div">
+            <input type="checkbox" id="checkbox" class="" />
+            <label htmlFor="checkbox"
+              >Даю <a href="#" target="_blank" rel="nofollow">согласие</a> на
+              обработку персональных данных</label
+            >
+          </div>
         </div>
-      </div>
+      </form>
     </div>
   </body>
 </html>
