--- a/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/index.html
+++ b/CSS Flexbox на каждый день/18. Горизонтальная форма CF7/index.html
@@ -25,7 +25,7 @@
           </div>
 
           <div class="checkbox_div">
-            <input type="checkbox" id="checkbox" class="" />
+            <input type="checkbox" id="checkbox" class="" required />
             <label htmlFor="checkbox"
               >Даю <a href="#" target="_blank" rel="nofollow">согласие</a> на
               обработку персональных данных</label
