--- a/CSS Flexbox на каждый день/25. Контент и изменение его расположения на телефонах/index.html
+++ b/CSS Flexbox на каждый день/25. Контент и изменение его расположения на телефонах/index.html
@@ -119,9 +119,91 @@
         </button>
       </div>
     </header>
+    <!-- main.cont>.cont-iinner+article+aside -->
+    <main class="cont d-flex">
+      <div class="cont-inner d-flex">
+        <article>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+
+          <p>Aenean commodo ligula eget dolor. Aenean massa.</p>
+
+          <p>
+            Cum sociis natoque penatibus et magnis dis parturient montes,
+            nascetur ridiculus mus.
+          </p>
+
+          <p>
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+          </p>
+
+          <p>Nulla consequat massa quis enim.</p>
+
+          <p>
+            Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+          </p>
+
+          <p>In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+
+          <p>
+            Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
+            dapibus.
+          </p>
+
+          <p>
+            Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
+          </p>
+
+          <p>
+            Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+          </p>
+
+          <p>
+            Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
+            Phasellus viverra nulla ut metus varius laoreet.
+          </p>
+
+          <p>
+            Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue.
+            Curabitur ullamcorper ultricies nisi.
+          </p>
+
+          <p>Nam eget dui. Etiam rhoncus.</p>
+
+          <p>
+            Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper
+            libero, sit amet adipiscing sem neque sed ipsum.
+          </p>
+
+          <p>
+            Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem.
+            Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut
+            libero venenatis faucibus.
+          </p>
+
+          <p>
+            Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
+            Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis
+            magna. Sed consequat, leo eget bibendum sodales, augue velit cursus
+            nunc,
+          </p>
+        </article>
+        <aside>
+          <!-- naw>ul>li*5>a -->
+          <naw>
+            <ul class="d-flex">
+              <li><a href="№">Маркетинг</a></li>
+              <li><a href="№">WordPress</a></li>
+              <li><a href="№">Екоммерц</a></li>
+              <li><a href="№">Финтех</a></li>
+              <li><a href="№">Эдтех</a></li>
+            </ul>
+          </naw>
+        </aside>
+      </div>
+    </main>
     <footer class="cont d-flex">
       <div class="cont-inner a-items-center space-between d-flex">
-        <p>&copy; 2017&ndash;2023 Цифровой Алекс</p>
+        <span>&copy; 2017&ndash;2023 Цифровой Алекс</span>
         <div class="cont-sub d-flex">
           <a
             href="<http://mysite.com/politika>"
