--- a/CSS на каждый день/08. Позиционирование/02. absolute Абсолютное позиционирование/index.html
+++ b/CSS на каждый день/08. Позиционирование/02. absolute Абсолютное позиционирование/index.html
@@ -124,7 +124,10 @@
     <main class="cont d-flex">
       <div class="cont-inner d-flex">
         <article>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+          <p class="p-text">
+            Кнопка "На жми" имеет position: absolute;, а не улетает она в левый
+            верхний угол потому что у main задано position: relative;.
+          </p>
 
           <p>Aenean commodo ligula eget dolor. Aenean massa.</p>
 
@@ -251,6 +254,7 @@
             nunc,
           </p>
         </article>
+
         <aside>
           <!-- naw>ul>li*5>a -->
           <naw>
