передний или на задний план — z-index

--- a/CSS на каждый день/08. Позиционирование/03. передний или на задний план z-index/index.html
+++ b/CSS на каждый день/08. Позиционирование/03. передний или на задний план z-index/index.html
@@ -145,6 +145,15 @@
           <p>
             Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
           </p>
+          <div class="div_blok_img">
+            <div class="div_blok_img img_1">
+              <img src="img/divan_500x500.jpg" alt="divan" />
+            </div>
+            <!-- <div class="div_blok_img img_3"></div> -->
+            <div class="div_blok_img img_2">
+              <img src="img/moroz_ytro_500x500.jpg" alt="priroda" />
+            </div>
+          </div>
 
           <p>In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
 
