--- a/CSS на каждый день/09.Работа с фоном объектов/01. Изменить цвет фона — background-color/index.html
+++ b/CSS на каждый день/09.Работа с фоном объектов/01. Изменить цвет фона — background-color/index.html
@@ -153,6 +153,9 @@
             <div class="div_blok_img img_2">
               <img src="img/moroz_ytro_500x500.jpg" alt="priroda" />
             </div>
+            <div class="div_blok_img img_3">
+              <img src="img/moroz_ytro_500x500.jp" alt="priroda" />
+            </div>
           </div>
 
           <p>In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
