--- a/CSS на каждый день/08. Позиционирование/02. absolute Абсолютное позиционирование/index.html
+++ b/CSS на каждый день/08. Позиционирование/02. absolute Абсолютное позиционирование/index.html
@@ -271,13 +271,19 @@
     </main>
     <div class="cont_icon d-flex">
       <a href="https://vk.com/"
-        ><img class="icon" src="img/vk_dzmcta9a2w8i.svg" alt="vc icon"
+        ><img class="icon" src="../../img/vk_dzmcta9a2w8i.svg" alt="vc icon"
       /></a>
       <a href="https://www.whatsapp.com/"
-        ><img class="icon" src="img/whatsapp_mby6a3fey841.svg" alt="dots icon"
+        ><img
+          class="icon"
+          src="../../img/whatsapp_mby6a3fey841.svg"
+          alt="dots icon"
       /></a>
       <a href="https://web.telegram.org/k/"
-        ><img class="icon" src="img/telegram_1zfa50dxdtdg.svg" alt="dots icon"
+        ><img
+          class="icon"
+          src="../../img/telegram_1zfa50dxdtdg.svg"
+          alt="dots icon"
       /></a>
     </div>
     <footer class="cont d-flex">
