--- a/CSS на каждый день/09.Работа с фоном объектов/02. backdrop-filter— Размытый фон, эффект стекла/index.html
+++ b/CSS на каждый день/09.Работа с фоном объектов/02. backdrop-filter— Размытый фон, эффект стекла/index.html
@@ -147,11 +147,11 @@
           </p>
           <div class="div_blok_img">
             <div class="div_blok_img img_1">
-              <img src="img/divan_500x500.jpg" alt="divan" />
+              <img src="../../img/divan_500x500.jpg" alt="divan" />
             </div>
             <!-- <div class="div_blok_img img_3"></div> -->
             <div class="div_blok_img img_2">
-              <img src="img/moroz_ytro_500x500.jpg" alt="priroda" />
+              <img src="../../img/moroz_ytro_500x500.jpg" alt="priroda" />
             </div>
             <div class="div_blok_img img_3">
               <img src="img/moroz_ytro_500x500.jp" alt="priroda" />
@@ -283,13 +283,19 @@
     </main>
     <div class="cont_icon d-flex">
       <a href="https://vk.com/"
-        ><img class="icon" src="img/vk_dzmcta9a2w8i.svg" alt="vc icon"
+        ><img class="icon" src="../../img/vk_dzmcta9a2w8i.svg" alt="vc icon"
       /></a>
       <a href="https://www.whatsapp.com/"
-        ><img class="icon" src="img/whatsapp_mby6a3fey841.svg" alt="dots icon"
+        ><img
+          class="icon"
+          src="../../img/whatsapp_mby6a3fey841.svg"
+          alt="dots icon"
       /></a>
       <a href="https://web.telegram.org/k/"
-        ><img class="icon" src="img/telegram_1zfa50dxdtdg.svg" alt="dots icon"
+        ><img
+          class="icon"
+          src="../../img/telegram_1zfa50dxdtdg.svg"
+          alt="dots icon"
       /></a>
     </div>
     <footer class="cont d-flex">
